Fixed footer wrap issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -167,7 +167,7 @@ input[type=text], select {
 =======================================================================*/
 footer p {
   display: block;
-  width: 220px;
+  width: 250px;
   margin: 200px auto 100px;
 }
 
